<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="16dp" >

        <ImageView
            android:id="@+id/image_splash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/nxp" />

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/image_splash"
            android:layout_marginTop="32dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name_info"
                android:textSize="22sp" />
            
            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:gravity="right" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/l1"
            android:layout_marginTop="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_surname_info"
                android:textSize="22sp" />
            
            <TextView
                android:id="@+id/user_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:gravity="right" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_below="@id/l2" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_address_info"
                android:textSize="22sp" />
            
            <TextView
                android:id="@+id/user_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:gravity="right" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_below="@id/l3" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_email_info"
                android:textSize="22sp" />
            
            <TextView
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:gravity="right" />
        </LinearLayout>
        
        <Button
            android:id="@+id/logout_user"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/blue"
            android:text="@string/button_logout_user"
            android:textColor="@android:color/white" />
    </RelativeLayout>

</LinearLayout>