<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_bottom_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_top_margin" >

    <include
        android:id="@+id/ll_conn_device"
        layout="@layout/device_info" />

    <TextView
        android:id="@+id/my_cards_empty"
        style="@style/select_text_heading"
        android:layout_below="@id/ll_conn_device"
        android:text="@string/cards_list_empty"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/llTrash"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:visibility="visible" >

        <Button
            android:id="@+id/create_card"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/image_background"
            android:text="@string/button_more_services"
            android:textColor="@android:color/black"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/progress_create_card"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:visibility="gone" >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/card_operating"
                android:textColor="@android:color/darker_gray"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/trash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:src="@drawable/trash"
        android:visibility="gone"
        android:layout_above="@id/llTrash" />

    <ImageView
        android:id="@+id/block_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/block"
        android:visibility="gone"
        android:layout_above="@id/llTrash"  />

    <com.nxp.nxpwalletconndev.views.LinearLayoutListView
        android:id="@+id/pane1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/trash"
        android:layout_below="@id/ll_conn_device"
        android:layout_margin="4dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/list_cards"
            android:layout_width="fill_parent"
            android:layout_height="match_parent" />
    </com.nxp.nxpwalletconndev.views.LinearLayoutListView>

</RelativeLayout>